# paldesigner

./: AGENTS.md  PROGRESS.md  import_response.json
data/: README.md  discovered_hint_paths.txt
data/raw/: __paldb_home.html  __paldb_partner_skills.html  __paldb_passive_skills.html  __paldb_stone_pit.html  __paldb_wheat_plantation.html  __paldb_work_suitability.html  __paldeck_breeding.html  __paldeck_buildings.html  __paldeck_home.html  __paldeck_items.html  __paldeck_pals.html  __paldeck_skills.html  __paldeck_technology.html  __palworld_config.html
docs/: pal_editor_reference_notes.md  rust_palworld_save_tools_mirroring_guide.md
src/server/: .env  .env.example  .gitignore  Cargo.toml  README.md
src/server/src/: config.rs  main.rs
src/server/src/api/: routes.rs
src/server/src/api/handlers/: health.rs  import_versions.rs  import_zip.rs  mod.rs
src/server/src/db/: mod.rs
src/server/src/db/migrations/: 0001_save_versions.sql  0002_save_artifacts.sql  0003_patchsets.sql  0004_normalized_entities.sql  0005_links.sql  0006_lineage.sql  0007_import_progress.sql  0008_import_parse_metrics.sql
src/server/src/save/: custom_registry.rs  detect.rs  export.rs  hint_registry.rs  mod.rs  normalize.rs  paltypes.rs  parse.rs  patch.rs  roundtrip.rs  zip.rs
src/server/src/save/rawdata/: base_camp.rs  character_container.rs  group.rs  mod.rs  worker_director.rs
src/server/src/storage/: fs.rs
src/server/storage/imports/e51cdb49-a8ac-497d-9119-b3ea7511394a/files/: LevelMeta.sav  LocalData.sav  WorldOption.sav
src/server/storage/imports/e51cdb49-a8ac-497d-9119-b3ea7511394a/files/Players/: 00000000000000000000000000000001_dps.sav
src/web/: README.md  package.json  vite.config.ts
src/web/src/: App.tsx  index.css
src/web/src/components/ui/: button.tsx
src/web/src/lib/: api.ts  types.ts
